--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,10 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
+#   access_key_id: <%= Rails.application.credentials.dig(:AWS_ACCESS_KEY) %>
+#   secret_access_key: <%= Rails.application.credentials.dig(:AWS_SECRET_ACCESS_KEY) %>
+#   region: <%= Rails.application.credentials.dig(:AWS_REGION) %>
+#   bucket: <%= Rails.application.credentials.dig(:S3_BUCKET_NAME) %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
